fix(components): fix spacing of FlipRadioGroup

--- a/packages/swirl-components/src/components/flip-radio-group/flip-radio-group.css
+++ b/packages/swirl-components/src/components/flip-radio-group/flip-radio-group.css
@@ -9,5 +9,5 @@
 .radio-group {
   display: flex;
   flex-direction: column;
-  gap: var(--s-space-3);
+  gap: var(--s-space-4);
 }
